# llaisys

./: .clang-format  .gitignore  METAX_BACKEND_PROGRESS.md  METAX_BACKEND_REPORT.md  OPTIMIZATION_PROGRESS.md  PROJECT1_CPU_OPT_REPORT.md  PROJECT2_CUDA_INTEGRATION_REPORT.md  PROJECT3_CHATBOT_DETAILED_NOTE.md  PROJECT3_IMPLEMENTATION_RECORD.md  README.md  README_ZN.md  REPORT.md  make.sh  project3-report.md  project3_report.md  run_all_tests.sh  test_kv_cache.py  xmake.lua  任务三-接口层时序图与口述稿.md  任务三-推理层时序图与张量流.md  任务三-答辩总稿（3分钟+8分钟）.md  任务二-Transformer核心算子统一笔记.md  任务二-面试速记版.md  复试-大模型个人笔记.md  报告.md  语法错误要点总结.md  项目1.md  项目2.md  项目3.md
docs/: interview_qa_zh.md  interview_script_5min_zh.md  metax_design_zh.md  pr_zh.md  report_zh.md  reproduce_zh.md  submission_zh.md
include/: llaisys.h
python/: chat_server.py  server.py  setup.cfg
python/llaisys/: __init__.py  chat_cli.py  chat_server.py  ops.py  server.py  tensor.py
python/llaisys/chat/: __init__.py  cli.py  engine.py  server.py  service.py  tui.py
python/llaisys/libllaisys/: __init__.py  llaisys_types.py  llama.py  models.py  ops.py  qwen2.py
python/llaisys/libllaisys/models/: __init__.py  qwen2.py  qwen2_tp.py
python/llaisys/models/: __init__.py  decoder_only.py  llama.py  qwen2.py  qwen2_binding.py  qwen2_tp.py
python/llaisys/static/: index.html
scripts/: benchmark_llaisys.py  chat_cli.py  setup_pai_nvidia.sh
src/: utils.hpp
test/: benchmark_infer.py  benchmark_linear.py  bootstrap.py  chat_cli.py  chat_server.py  chat_web.html  debug.py  my_test.py  test_chat_server.py  test_hf.py  test_infer.py  (+6 more)
(+282 files in other folders)
